# fodmap_app

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automation.yml
fodmap_app/: manage.py
fodmap_app/blogs/: admin.py  models.py  serializers.py  urls.py  views.py
fodmap_app/fodmap_app/: asgi.py  settings.py  urls.py  wsgi.py
fodmap_app/foods/: models.py  serializers.py  urls.py  views.py
fodmap_app/foods/fixtures/: beverages.json  dairy.json  fish_seafood.json  fruits.json  grains_cereals.json  herbs_spices.json  legumes_pulses.json  meat_poultry.json  nuts_seeds.json  oils_sauces_condiments.json  vegetables.json
fodmap_app/home/: urls.py
fodmap_app/journals/: models.py  serializers.py  urls.py  views.py
fodmap_app/posts/: admin.py  models.py  serializers.py  urls.py  views.py
fodmap_app/users/: admin.py  auth.py  models.py  serializers.py  urls.py  views.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/assets/: banners.js
frontend/src/components/: BlogForm.jsx  BlogList.jsx  CardTemplate.jsx  FoodList.jsx  JournalEntryForm.jsx  LoginForm.jsx  LogoutButton.jsx  MainFooter.jsx  Navbar.jsx  PageHeader.jsx  ProfileCard.jsx  RegisterForm.jsx  SearchDropdown.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useDebouncedValidation.jsx
frontend/src/pages/: BlogDetail.jsx  Dashboard.jsx  DiscussionForm.jsx  Discussions.jsx  DiscussionsForm.jsx  (+7 more)
src/fodmap_app/: __init__.py
(+20 files in other folders)
